[gd_scene load_steps=26 format=2]

[ext_resource path="res://TitleScreen.gd" type="Script" id=1]
[ext_resource path="res://assets/player.png" type="Texture" id=2]
[ext_resource path="res://assets/mountain.png" type="Texture" id=3]
[ext_resource path="res://assets/player_2.png" type="Texture" id=4]
[ext_resource path="res://assets/story.mp3" type="AudioStream" id=5]
[ext_resource path="res://assets/credits.ogg" type="AudioStream" id=6]
[ext_resource path="res://assets/deeper_intro.wav" type="AudioStream" id=7]

[sub_resource type="StyleBoxFlat" id=1]

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 64, 128 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 64, 128 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 128, 0, 64, 128 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 192, 0, 64, 128 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 256, 0, 64, 128 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 320, 0, 64, 128 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 384, 0, 64, 128 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 448, 0, 64, 128 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 64, 128 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 4 )
region = Rect2( 64, 0, 64, 128 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 4 )
region = Rect2( 128, 0, 64, 128 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 4 )
region = Rect2( 192, 0, 64, 128 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 4 )
region = Rect2( 256, 0, 64, 128 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 4 )
region = Rect2( 320, 0, 64, 128 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 4 )
region = Rect2( 384, 0, 64, 128 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 4 )
region = Rect2( 448, 0, 64, 128 )

[sub_resource type="SpriteFrames" id=18]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": true,
"name": "player_1",
"speed": 5.0
}, {
"frames": [ SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ) ],
"loop": true,
"name": "player_2",
"speed": 5.0
} ]

[node name="TitleScreen" type="Node"]
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.67451, 0.196078, 0.196078, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 984.0
margin_bottom = 560.0

[node name="Panel" type="Panel" parent="MarginContainer/VBoxContainer"]
margin_right = 984.0
margin_bottom = 278.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 282.0
margin_right = 984.0
margin_bottom = 560.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Panel2" type="Panel" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 325.0
margin_bottom = 278.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="AnimatedSprite" type="AnimatedSprite" parent="MarginContainer/VBoxContainer/HBoxContainer/Panel2"]
position = Vector2( 838.672, -38.3813 )
scale = Vector2( 7, 7 )
frames = SubResource( 18 )
animation = "player_2"

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 329.0
margin_right = 654.0
margin_bottom = 278.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="Panel" type="Panel" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_right = 325.0
margin_bottom = 90.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="StartButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -125.0
margin_top = -20.0
margin_right = 125.0
margin_bottom = 20.0
text = "START PLAYING THE GAME"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel4" type="Panel" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 94.0
margin_right = 325.0
margin_bottom = 184.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="StoryButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/Panel4"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -125.0
margin_top = -20.0
margin_right = 125.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "STORY"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel5" type="Panel" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 188.0
margin_right = 325.0
margin_bottom = 278.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CreditsButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/Panel5"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -125.0
margin_top = -20.0
margin_right = 125.0
margin_bottom = 20.0
text = "CREDITS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 658.0
margin_right = 984.0
margin_bottom = 278.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="AnimatedSprite2" type="AnimatedSprite" parent="MarginContainer/VBoxContainer/HBoxContainer/Panel"]
position = Vector2( -477.124, -38.6033 )
scale = Vector2( 7, 7 )
frames = SubResource( 18 )
animation = "player_1"

[node name="Fader" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="Fader"]

[node name="mountain" type="Sprite" parent="."]
position = Vector2( 511.521, 154.476 )
scale = Vector2( 0.240896, 0.240896 )
texture = ExtResource( 3 )

[node name="Story" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="Credits" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="Title" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -5.0
